# happy-evil

./: readme.TXT  settings.gradle
app/: CMakeLists.txt  build.gradle
app/release/: output-metadata.json
app/release/baselineProfiles/0/: app-release.dm
app/release/baselineProfiles/1/: app-release.dm
app/src/androidTest/java/com/example/lyt/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: com_example_lyt_App.h  complie.bat  consts.h  native-lib.cpp
app/src/main/java/com/example/lyt/: A.java  App.java  GLB.java  LYTReceiver.java  MainActivity.java  SNDActivity.java
app/src/main/java/com/example/lyt/temp/: RCV.java  SVR.java
app/src/main/res/drawable/: button_states.xml
app/src/main/res/layout/: content_sndactivity.xml  fst.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-v23/: themes.xml
app/src/main/res/xml/: accessibility_service_config.xml
app/src/test/java/com/example/lyt/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
